manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      containers:
      - name: hashgenerator
        image: jakousa/dwk-app1:b7fc18de2376da80ff0cfc72cf581a9f94d10e64
