manifests/shared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong # could not make it work with rewrite-target and without changing the application code for some reason
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 4567
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 3456
